# harriet

./: Cargo.toml  README.md  quote_in_quote.ttl  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: parse.rs  triples.rs
src/: lib.rs  triple_production.rs
tests/: base_only.ttl  parse_examples.rs  roundtrip_examples.rs  triple_production_examples.rs
tests/reference_examples/: example10.ttl  example11.ttl  example12.ttl  example13.ttl  example14.ttl  example16.ttl  example17.ttl  example20.ttl  example24.ttl  example26.ttl  example3.ttl  example4.ttl  example5.ttl  example6.ttl  example7.ttl  example8.ttl  example9.ttl
tests/wildtype_examples/: bibo.ttl  blank_node_object_dot.ttl  example12_only_decimal.ttl  example12_only_double.ttl  example12_only_integer.ttl  example1_without_a.ttl  example24_simple1.ttl  example24_simple2.ttl  foaf_mirror.ttl  leading_whitespace_base.ttl  leading_whitespace_prefix.ttl  nested_lists.ttl  nested_lists2.ttl
