[package]
name = "harriet"
version = "0.1.0"
edition = "2018"
description = "Parser for the Turtle (RDF) format"
license = "MIT OR Apache-2.0"
authors = ["Maximilian Goisser <max@field33.com>"]
repository = "https://github.com/field33/harriet"
documentation = "https://docs.rs/harriet"
keywords = ["parser", "ast", "turtle", "rdf", "semantic-web"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie-factory = "0.3.2"
either = "1.6.1"
nom = { version = "6.2.1", features = ["alloc"]}
