[package]
name = "harriet"
version = "0.3.0"
edition = "2018"
description = "Parser for the Turtle (RDF) format"
license = "MIT OR Apache-2.0"
authors = ["Maximilian Goisser <max@field33.com>"]
repository = "https://github.com/field33/harriet"
documentation = "https://docs.rs/harriet"
keywords = ["parser", "ast", "turtle", "rdf", "semantic-web"]
categories = ["parser-implementations"]
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie-factory = "0.3"
either = "1.6"
nom = { version = "7", features = ["alloc"]}
anyhow = "1"
snowflake = "1"
oxiri = "0.2.2"

[dev-dependencies]
pretty_assertions = "1.2"
